--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -11,6 +11,10 @@ are at the top. Dates written extra large are release dates. This contains only 
 
 ----
 
+*2009 Sept 12*
+  * Added (experimental) `setTimeout()`, `cancelTimeout()`, and `sleep()` (which relinquishes control to other threads). The first two work mostly like their browser equivalents, but need more testing in order to determine if their multi-threaded use of v8 is kosher. See [BindableFunctions].
+  * Other minor touchups i've been collecting over the summer.
+
 *2009 May 27*
 
   * Patch from robtsuk: `v8::juice::IncludeScript()` (JS `include()`) now returns a live reference instead of a dead one, fixing a crash when the return value of `include()` was dereferenced.
