--- a/wiki/PluginWhefs.wiki
+++ b/wiki/PluginWhefs.wiki
@@ -218,9 +218,10 @@ filesystem will be lost. The in-memory FS can be copied to disk using
 =Some things to keep in mind=
 
   * See the Caveats section, above, for important notes, especially about concurrency.
+  * _Do not_ use whefs from multiple threads via [BindableFunctions setTimeout()]! Doing so _will_ eventually corrupt a read/write EFS or produce incorrect output on a read-only EFS.
   * An EFS container cannot be resized dynamically. To resize it, the data must be exported, the container re-created, and the data re-imported.
   * The original whefs source tree comes with [http://code.google.com/p/whefs/wiki/WhefsTools tools several tools for manipulating whefs filesystems].
-  * There are _lots_ more docs available via the whefs source code (API docs) and [http://code.google.com/p/whefs/wiki/WhefsTools the whefs home page].
+  * There are _lots_ more docs available via the whefs source code (API docs) and [http://code.google.com/p/whefs the whefs home page].
   * whefs doesn't support true directories. Pseudofiles can be named `/path/to/file.txt`, but they're all currently stored in one big directory. This makes searching by name (e.g. using `ls()` or `openPseudofile()`) relatively slow.
   * whefs' engine is not scalable (in terms of performance) to large data stores. Keep them small (a few hundred inodes or so) or suffer dearly from the underlying linear algorithms.
   * whefs is fairly minimalistic - do not expect all the features of a normal filesystem. It does only what i need it to do.
