--- a/wiki/ThreadingInJS.wiki
+++ b/wiki/ThreadingInJS.wiki
@@ -42,7 +42,7 @@ The `sleep()` family of functions will unlock the v8 engine while they are sleep
 
 ==Timing is Everything (and undefined)==
 
-The addition of multiple threads in a process always adds some level of uncertainty in the timing of execution of the various threads. High-level languages which use unpredictable GC (and/or lack destructors) add even more uncertainty (destructors are a great way to simplify locking in languages which support them). Threads created via `setTimeout()` cannot be reliably used for high-resolution threading (that is, where threads are meant to interact at small, fixed intervals).
+The addition of multiple threads in a process always adds some level of uncertainty in the timing of execution of the various threads. High-level languages which use unpredictable GC (and/or lack destructors) add even more uncertainty (destructors are a great way to simplify locking in languages which support them). Threads created via `setTimeout()` cannot be reliably used for high-resolution threading (that is, where threads interact in very short intervals).
 
 In the following code it is impossible to know with certainty which of the operations, running or cancelling the timeout, will happen first, due to the imprecision introduced via multi-threading and system-level timing issues:
 
